Sat Jun 28 15:24:44 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_ProtoDict.h: Added MP_CmtProto_2_MPType(cmt)

	* MP_PolyDict.h:  Added MP_CmtPolyExpTreePoly

	* MP_PariBigInt.h: Shadow definition of overflow

	* MP_NumberDict.h: Added MP_CmtNumberInteger

	* MP_Config.h.in: Added dewfines for pari compilation

	* MP_BasicDict.h: Added MP_CopBasicComplex

Wed Jun 25 09:14:42 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_Env.h: typedef MP_TranspOps_t: used VARARGS in function
	  declarartion to enable g++ compilation

Tue Jun 24 12:29:13 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_PariBigInt.h (overflow): added dirty andi hack

Wed Jun 11 14:18:51 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_PolyDict.h (MP_CopPolyLeadExp): changed some names

Thu Jun  5 12:02:12 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_Config.h.in: added WORDS_BIGENDIAN target 

Sun May 25 11:11:47 1997  Simon Gray  (sgray@Pooh)

       * MP_Put.h: removed obsolete IMP_PutMpOperator macro
	 MP_Types.h: removed obsolete MP_MpOperatorType
	 MP_Get.h: removed obsolete references to getting an MpOperator
		   added macros to get MetaOperator and CommonMetaOperator

Tue May 20 17:39:31 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_Config.h.in: added defines for _mp_d, _mp_size, _mp_alloc, so
	  that MP can be built with gmp v1.3

	* MP.h: added #include sys/select.h (AIX needs it)

	* MP_Config.h.in: added define HAVE_SYS_SELECT_H which is set by
	  configure 

Mon May  5 12:19:30 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_MatrixDict.h: removed comment beginning with //

Fri May  2 23:20:05 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>
