@@ -23,6 +23,7 @@
  ***************************************************************************/
 #define MP_CmtNumberRational           1
 #define MP_CmtNumberInteger             2
+#define MP_CmtNumberComplex             3
 
 
 /***************************************************************************
