@@ -36,6 +36,21 @@
  * (Common) Constants
  *
  ***************************************************************************/
+#define MP_CcPolyOrdering_Unknown       0 
+#define MP_CcPolyOrdering_Vector        1 /* a */
+#define MP_CcPolyOrdering_Matrix        2 /* M */
+#define MP_CcPolyOrdering_IncComp       3 /* c */
+#define MP_CcPolyOrdering_DecComp       4 /* C */
+#define MP_CcPolyOrdering_Lex           5 /* lp */
+#define MP_CcPolyOrdering_DegRevLex     6 /* dp */
+#define MP_CcPolyOrdering_DegLex        7 /* Dp */
+#define MP_CcPolyOrdering_NegLex        8 /* ls */
+#define MP_CcPolyOrdering_NegDegRevLex  9 /* ds */
+#define MP_CcPolyOrdering_NegDegLex     10 /* Ds */
+#define MP_CcPolyOrdering_NegRevLex     11
+#define MP_CcPolyOrdering_RevLex        12
+
+#if 0 /* Here is what it used to be */
 #define MP_CcPolyOrdering_No    0
 #define MP_CcPolyOrdering_a     1
 #define MP_CcPolyOrdering_c     2
@@ -51,7 +66,7 @@
 #define MP_CcPolyOrdering_ws    12
 #define MP_CcPolyOrdering_Ws    13
 #define MP_CcPolyOrdering_Unspec 14
-
+#endif
 
 
 /***************************************************************************
